argo/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: salesforce-webhook-ingestor
  labels:
    app: salesforce-webhook-ingestor
    app.kubernetes.io/component: salesforce-webhook-ingestor
    app.kubernetes.io/instance: salesforce-webhook-ingestor
    app.kubernetes.io/name: salesforce-webhook-ingestor
    app.kubernetes.io/part-of: salesforce-webhook-ingestor
    app.openshift.io/runtime: camel
    app.openshift.io/runtime-version: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salesforce-webhook-ingestor
  template:
    metadata:
      labels:
        app: salesforce-webhook-ingestor
        deploymentconfig: salesforce-webhook-ingestor
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "200m"
          terminationMessagePath: /dev/termination-log
          name: salesforce-webhook-ingestor
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: quay.io/gcamposo/salesforce-webhook-ingestor:1.0.4
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 20
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
