argo/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: salesforce-webhook-ingestor
  name: salesforce-webhook-ingestor
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: HTTP
    targetPort: 8080
  selector:
    app: salesforce-webhook-ingestor
