argo/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: salesforce-webhook-ingestor
  name: salesforce-webhook-ingestor
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: salesforce-webhook-ingestor
    weight: 100
